<resources>
    <string name="app_name">Beeceptor</string>
    <string name="title_article">Article</string>
    <string name="title_detail">Details</string>
    <string name="title_edit">Edit Article</string>

    <string name="repo_language">Others</string>
    <string name="error_message">Something went wrong!</string>
    <string name="network_check">Check your internet and try again.</string>
    <string name="button_retry">Retry</string>
    <string name="edit_content">Edit content</string>
    <string name="btn_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>
