<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_article"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_article"
        android:name="com.imceits.android.dbsbeeceptortask.ui.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_nav_article_to_nav_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.imceits.android.dbsbeeceptortask.ui.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_nav_detail_to_nav_update"
            app:destination="@id/nav_update" />
        <argument
            android:name="article_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_update"
        android:name="com.imceits.android.dbsbeeceptortask.ui.UpdateFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_update" >
        <argument
            android:name="arc_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>
