<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.imceits.android.dbsbeeceptortask.data.Resource" />
        <import type="com.imceits.android.dbsbeeceptortask.data.Status" />
        <variable
            name="resource"
            type="Resource" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{resource.status == Status.ERROR? View.VISIBLE : View.GONE}">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/network_width"
            android:layout_height="@dimen/network_height"
            android:layout_centerInParent="true"
            android:contentDescription="@string/error_message"
            app:srcCompat="@drawable/ic_network_off" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/error_message"
            android:textColor="@color/button_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/network_check"
            android:textColor="@color/button_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:clickable="true"
            android:text="@string/button_retry"
            app:backgroundTint="@color/button_color"
            android:focusable="true" />
    </RelativeLayout>
</layout>